make main container invisible during layout to avoid jankiness

--- a/inst/rmarkdown/templates/flex_dashboard/resources/flexdashboard.css
+++ b/inst/rmarkdown/templates/flex_dashboard/resources/flexdashboard.css
@@ -53,7 +53,7 @@ body hr {
 */
 
 #dashboard-container {
-
+  visibility: hidden;
 }
 
 .tab-content>.section.level1.active {
